--- a/app/src/main/res/layout/layout_pg_pictures.xml
+++ b/app/src/main/res/layout/layout_pg_pictures.xml
@@ -20,7 +20,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <com.google.android.material.tabs.TabLayout
-        android:id="@+id/tabLayout2"
+        android:id="@+id/layoutPgPicturesTabLayout"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:animateLayoutChanges="true"
@@ -35,13 +35,12 @@
         app:tabIndicatorGravity="center" />
 
     <TextView
-        android:id="@+id/editTextTextPersonName2"
+        android:id="@+id/layoutPgPictures_NameOfPg"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:elevation="3dp"
         android:layout_marginStart="10dp"
         android:layout_marginTop="5dp"
-        android:text="@string/layout_pg_pictures_name"
         android:textColor="#000000"
         android:textSize="18sp"
         android:textStyle="bold"
@@ -49,25 +48,24 @@
         app:layout_constraintTop_toBottomOf="@+id/viewPager22" />
 
     <TextView
-        android:id="@+id/textView5"
+        android:id="@+id/layoutPgPictures_AreaOfPg"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:text="@string/layout_pg_pictures_area"
         android:elevation="3dp"
         android:textSize="14sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2" />
+        app:layout_constraintTop_toBottomOf="@+id/layoutPgPictures_NameOfPg" />
 
     <RatingBar
-        android:id="@+id/ratingBar"
+        android:id="@+id/layoutPgPictures_RatingBar"
         style="@style/Widget.AppCompat.RatingBar.Small"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:elevation="3dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView5" />
+        app:layout_constraintTop_toBottomOf="@+id/layoutPgPictures_AreaOfPg" />
 
     <TextView
         android:id="@+id/textView6"
@@ -83,12 +81,11 @@
         app:layout_constraintTop_toBottomOf="@+id/viewPager22" />
 
     <TextView
-        android:id="@+id/textView7"
+        android:id="@+id/layoutPgPictures_Rent"
         android:elevation="3dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="3dp"
-        android:text="@string/layout_pg_pictures_rent"
         android:textColor="#000000"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="@+id/textView6"
@@ -96,7 +93,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView6" />
 
     <TextView
-        android:id="@+id/editTextTextPersonName3"
+        android:id="@+id/textView7"
         android:layout_width="wrap_content"
         android:elevation="3dp"
         android:layout_height="wrap_content"
@@ -107,7 +104,7 @@
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ratingBar" />
+        app:layout_constraintTop_toBottomOf="@+id/layoutPgPictures_RatingBar" />
 
     <HorizontalScrollView
         android:id="@+id/horizontalScrollView"
@@ -121,29 +118,13 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3">
+        app:layout_constraintTop_toBottomOf="@+id/textView7">
 
         <LinearLayout
             android:id="@+id/pgPicturesUtilitiesLayout"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:orientation="horizontal">
-            <ImageView
-                android:padding="5dp"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:src="@drawable/bed"/>
-            <ImageView
-                android:padding="5dp"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:src="@drawable/bed"/>
-            <ImageView
-                android:padding="5dp"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:src="@drawable/bed"/>
-        </LinearLayout>
+            android:orientation="horizontal" />
     </HorizontalScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
