--- a/app/src/main/res/drawable/text_gradient.xml
+++ b/app/src/main/res/drawable/text_gradient.xml
@@ -1,10 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item>
-        <shape>
-            <gradient
-                android:startColor="@color/secondary"
-                android:endColor="@color/colorPrimary"/>
-        </shape>
-    </item>
-</selector>
+<shape xmlns:android="http://schemas.android.com/apk/res/android">
+        <gradient
+            android:startColor="@color/secondary"
+            android:endColor="@color/colorPrimary"/>
+</shape>
