--- a/app/src/main/res/layout/activity_home_page_with_navigation_drawer.xml
+++ b/app/src/main/res/layout/activity_home_page_with_navigation_drawer.xml
@@ -5,14 +5,15 @@
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="false"
-    tools:openDrawer="start">
-
-    <include
-        layout="@layout/activity_home_page"
+    android:fitsSystemWindows="true"
+    tools:context=".demo">
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+        <include
+            layout="@layout/toolbar"/>
+    </LinearLayout>
     <com.google.android.material.navigation.NavigationView
         android:id="@+id/nav_view"
         android:layout_width="wrap_content"
