--- a/app/src/main/res/layout/activity_wishlist.xml
+++ b/app/src/main/res/layout/activity_wishlist.xml
@@ -4,45 +4,26 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".HomePage">
-
+    tools:context=".wishlist">
     <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbar"
+        android:id="@+id/wishlistToolbar"
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:elevation="5dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-    <EditText
-        android:id="@+id/search_input"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:background="@drawable/search_textfield"
-        android:drawableLeft="@drawable/search_texticon"
-        android:hint="Search for tenants"
-        app:layout_constraintHeight_default="percent"
-        app:layout_constraintHeight_percent=".08"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/toolbar"
-        app:layout_constraintWidth_default="percent"
-        app:layout_constraintWidth_percent=".96"
-        android:enabled="false"/>
-
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/homePageParentRecyclerView"
+        android:id="@+id/wishlistRecyclerView"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/search_input"
+        app:layout_constraintTop_toBottomOf="@+id/wishlistToolbar"
         app:layout_constraintVertical_bias="0.0" />
-
     <ProgressBar
-        android:id="@+id/homepageProgressBar"
+        android:id="@+id/wishlistProgressBar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
