--- a/app/src/main/res/layout/toolbar_heart.xml
+++ b/app/src/main/res/layout/toolbar_heart.xml
@@ -2,8 +2,10 @@
 <FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="35dp"
     android:layout_height="35dp"
-    android:layout_gravity="center">
+    android:layout_gravity="center"
+    android:id="@+id/wishlistFrameLayout">
     <ImageView
+        android:id="@+id/toolbarHeartImageView"
         android:layout_width="@dimen/menu_item_icon_size"
         android:layout_height="@dimen/menu_item_icon_size"
         android:layout_gravity="center"
