--- a/app/src/main/res/layout/toolbar_notification.xml
+++ b/app/src/main/res/layout/toolbar_notification.xml
@@ -4,8 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="45dp"
     android:layout_height="35dp"
-    android:layout_gravity="center">
+    android:layout_gravity="center"
+    android:id="@+id/notificationFrameLayout">
     <ImageView
+        android:id="@+id/toolbarNotificationImageView"
         android:layout_width="@dimen/menu_item_icon_size"
         android:layout_height="@dimen/menu_item_icon_size"
         android:layout_gravity="center"
@@ -21,7 +23,7 @@
         android:background="@drawable/redcircle"
         tools:visibility="visible">
         <TextView
-            android:id="@+id/red_circle"
+            android:id="@+id/notificationCount"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
