--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,7 @@
     <color name="colorPrimary">#FFFFFF</color>
     <color name="colorPrimaryDark">#000000</color>
     <color name="colorAccent">#03DAC5</color>
+    <color name="colorAccentDark">#03DADD</color>
     <color name="secondary">#4E6E6B</color>
     <color name="black">#000000</color>
     <color name="white">#FFFFFF</color>
