--- a/app/src/main/res/drawable/ic_ok.xml
+++ b/app/src/main/res/drawable/ic_ok.xml
@@ -8,6 +8,6 @@
       android:strokeLineJoin="miter"
       android:strokeWidth="1.2"
       android:fillColor="#00000000"
-      android:strokeColor="#03DAC5"
+      android:strokeColor="#000000"
       android:strokeLineCap="square"/>
 </vector>
