--- a/app/src/main/res/layout/activity_home_page_with_navigation_drawer.xml
+++ b/app/src/main/res/layout/activity_home_page_with_navigation_drawer.xml
@@ -5,8 +5,7 @@
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
-    tools:context=".demo">
+    android:fitsSystemWindows="true">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
