--- a/app/src/main/res/layout/activity_otp_page.xml
+++ b/app/src/main/res/layout/activity_otp_page.xml
@@ -15,7 +15,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.207"
-        app:srcCompat="@drawable/ic_envelope_alt" />
+        android:src="@drawable/ic_envelope_alt" />
 
     <ImageView
         android:id="@+id/imageView2"
