--- a/app/src/main/res/layout/activity_home_page_with_navigation_drawer.xml
+++ b/app/src/main/res/layout/activity_home_page_with_navigation_drawer.xml
@@ -5,20 +5,15 @@
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true">
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-        <include
-            layout="@layout/toolbar"/>
-    </LinearLayout>
+    android:fitsSystemWindows="false">
+
+    <include layout="@layout/activity_home_page"/>
+
     <com.google.android.material.navigation.NavigationView
         android:id="@+id/nav_view"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
-        android:fitsSystemWindows="true"
         app:headerLayout="@layout/layout_navigation_header"
         app:menu="@menu/activity_main_drawer"/>
 </androidx.drawerlayout.widget.DrawerLayout>
