--- a/app/src/main/res/layout/activity_pg_details.xml
+++ b/app/src/main/res/layout/activity_pg_details.xml
@@ -1,13 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorPrimary"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:background="@color/colorPrimary">
 
-    <include
-        android:id="@+id/toolbar_pgdetail"
-        layout="@layout/toolbar" />
 
     <ScrollView
         android:layout_width="match_parent"
@@ -15,7 +12,7 @@
         app:layout_constraintBottom_toTopOf="@id/pgDetailsButtonLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/toolbar_pgdetail">
+        app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -64,31 +61,33 @@
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintHeight_default="percent"
-        app:layout_constraintHeight_percent=".075">
+        app:layout_constraintHeight_percent=".075"
+        app:layout_constraintStart_toStartOf="parent">
+
         <Button
             android:id="@+id/wishlist_button"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_margin="2dp"
+            android:layout_marginBottom="5dp"
             android:layout_weight="1"
             android:background="@color/black"
             android:elevation="3dp"
             android:text="ADD TO WISHLIST"
             android:textColor="@color/colorAccent"
             android:textSize="18sp"
-            app:layout_constraintWidth_default="percent"
-            app:layout_constraintWidth_percent=".49"
-            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginBottom="5dp"/>
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintWidth_default="percent"
+            app:layout_constraintWidth_percent=".49" />
 
         <Button
             android:id="@+id/book_button"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_margin="2dp"
+            android:layout_marginBottom="5dp"
             android:layout_weight="1"
             android:background="@color/black"
             android:elevation="3dp"
@@ -96,13 +95,10 @@
             android:textColor="@color/colorAccent"
             android:textSize="18sp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintWidth_default="percent"
-            app:layout_constraintWidth_percent=".49"
             app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginBottom="5dp"/>
+            app:layout_constraintWidth_default="percent"
+            app:layout_constraintWidth_percent=".49" />
     </androidx.constraintlayout.widget.ConstraintLayout>
-
-
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
