--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -5,10 +5,6 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_home"
-            android:icon="@drawable/ic_menu_camera"
-            android:title="@string/slide_bar_menu_1"/>
-        <item
             android:id="@+id/nav_gallery"
             android:icon="@drawable/ic_menu_camera"
             android:title="@string/slide_bar_menu_2" />
@@ -16,5 +12,10 @@
             android:id="@+id/nav_slideshow"
             android:icon="@drawable/ic_menu_camera"
             android:title="@string/slide_bar_menu_3" />
+        <item
+            android:id="@+id/activityMainDrawer_signOut"
+            android:icon="@drawable/ic_menu_camera"
+            android:title="Sign-Out"/>
+
     </group>
 </menu>
