--- a/app/src/main/res/layout/activity_otp_page.xml
+++ b/app/src/main/res/layout/activity_otp_page.xml
@@ -6,93 +6,103 @@
     android:layout_height="match_parent"
     tools:context=".otp_page"
     android:orientation="vertical">
+
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="167dp"
-        android:layout_height="152dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:src="@drawable/ic_envelope_alt"
+        android:visibility="visible"
+        app:layout_constraintBottom_toBottomOf="@+id/textView3"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHeight_default="percent"
+        app:layout_constraintHeight_percent="0.2"
+        app:layout_constraintHorizontal_bias="0.463"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.207"
-        android:src="@drawable/ic_envelope_alt" />
+        app:layout_constraintVertical_bias="0.739"
+        app:layout_constraintWidth_default="percent"
+        app:layout_constraintWidth_percent="0.4" />
 
     <ImageView
         android:id="@+id/imageView2"
-        android:layout_width="62dp"
-        android:layout_height="65dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="@+id/imageView"
         app:layout_constraintEnd_toEndOf="@+id/imageView"
+        app:layout_constraintHeight_default="percent"
+        app:layout_constraintHeight_percent="0.1"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="@+id/imageView"
         app:layout_constraintTop_toTopOf="@+id/imageView"
         app:layout_constraintVertical_bias="0.0"
-        app:srcCompat="@drawable/ic_verified" />
+        app:layout_constraintWidth_default="percent"
+        app:layout_constraintWidth_percent="0.15"
+         android:src="@drawable/ic_verified"/>
 
     <TextView
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="31dp"
+        android:layout_marginBottom="32dp"
         android:gravity="center"
         android:text="OTP Verification"
         android:textColor="@color/colorPrimaryDark"
         android:textSize="25dp"
         android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="@+id/textView4"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+        app:layout_constraintHorizontal_bias="0.455"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
+        android:layout_marginBottom="408dp"
         android:gravity="center"
         android:text="Enter OPT sent to your phone number"
         android:textColor="@color/secondary"
         android:textSize="15dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView3"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <com.chaos.view.PinView
         android:id="@+id/otpinput"
+        style="@style/PinWidget.PinView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:cursorVisible="true"
         android:itemBackground="#ffffff"
+        app:cursorColor="#000000"
         app:hideLineWhenFilled="true"
         app:itemCount="6"
         app:itemHeight="50dp"
         app:itemRadius="5dp"
         app:itemWidth="50dp"
-        app:cursorColor="#000000"
         app:layout_constraintBottom_toTopOf="@+id/no_otp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView4"
-        app:layout_constraintVertical_bias="0.1"
-        app:lineColor="@color/colorAccent"
-        style="@style/PinWidget.PinView"/>
+        app:layout_constraintVertical_bias="0.201"
+        app:lineColor="@color/colorAccent" />
 
     <Button
         android:id="@+id/verify"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="28dp"
+        android:background="@drawable/sign_up_button"
+        android:onClick="verifyOtp"
         android:text="Verify"
+        android:textSize="15dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/otpinput"
-        android:background="@drawable/sign_up_button"
-        android:textSize="15dp"
-        android:onClick="verifyOtp"
-        />
+        app:layout_constraintTop_toBottomOf="@+id/otpinput" />
 
     <ProgressBar
         android:id="@+id/progressbar"
@@ -100,10 +110,10 @@
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/verify"
-        app:layout_constraintHorizontal_bias="0.716"
+        app:layout_constraintHorizontal_bias="0.796"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/otpinput"
-        app:layout_constraintVertical_bias="0.063" />
+        app:layout_constraintVertical_bias="0.098" />
 
     <TextView
         android:id="@+id/no_otp"
@@ -119,20 +129,21 @@
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/verify"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.045" />
 
     <TextView
         android:id="@+id/resend"
         android:layout_width="83dp"
         android:layout_height="17dp"
         android:layout_marginTop="15dp"
-        android:layout_marginEnd="112dp"
         android:text=" RESEND "
         android:textColor="@color/colorAccent"
         android:textSize="15dp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.655"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/verify"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.059" />
 </androidx.constraintlayout.widget.ConstraintLayout>
