--- a/app/src/main/res/drawable/ic_envelope_alt.xml
+++ b/app/src/main/res/drawable/ic_envelope_alt.xml
@@ -6,15 +6,15 @@
   <path
       android:pathData="M2,5h20v14h-20z"
       android:strokeLineJoin="miter"
-      android:strokeWidth="3"
+      android:strokeWidth="1.2"
       android:fillColor="#00000000"
-      android:strokeColor="#4E6E6B"
+      android:strokeColor="@color/colorAccent"
       android:strokeLineCap="square"/>
   <path
       android:pathData="M2,5l10,9 10,-9"
       android:strokeLineJoin="miter"
-      android:strokeWidth="3"
+      android:strokeWidth="1.2"
       android:fillColor="#00000000"
-      android:strokeColor="#4E6E6B"
+      android:strokeColor="@color/colorAccent"
       android:strokeLineCap="round"/>
 </vector>
