--- a/app/src/main/res/layout/activity_home_page_with_navigation_drawer.xml
+++ b/app/src/main/res/layout/activity_home_page_with_navigation_drawer.xml
@@ -15,5 +15,6 @@
         android:layout_height="match_parent"
         android:layout_gravity="start"
         app:headerLayout="@layout/layout_navigation_header"
-        app:menu="@menu/activity_main_drawer"/>
+        app:menu="@menu/activity_main_drawer"
+        android:background="@color/colorPrimaryDark"/>
 </androidx.drawerlayout.widget.DrawerLayout>
