--- a/app/src/main/res/layout/activity_about__us.xml
+++ b/app/src/main/res/layout/activity_about__us.xml
@@ -9,17 +9,18 @@
     <ImageView
         android:layout_width="93dp"
         android:layout_height="73dp"
+        android:layout_marginBottom="20dp"
         android:src="@drawable/ic_roof_logo"
         app:layout_constraintBottom_toTopOf="@+id/textView17"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.119"
+        app:layout_constraintHorizontal_bias="0.166"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/textView17"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="220dp"
+        android:layout_marginBottom="68dp"
         android:text="About Us"
         android:textColor="@color/colorAccent"
         android:textSize="35dp"
@@ -32,8 +33,9 @@
         android:id="@+id/textView19"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="120dp"
-        android:text="It is an online platform which acts as a bridge "
+        android:layout_marginBottom="464dp"
+        android:text="It is an online platform which acts as a bridge between
+                       renters"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
