--- a/app/src/main/res/layout/activity_home_page_with_navigation_drawer.xml
+++ b/app/src/main/res/layout/activity_home_page_with_navigation_drawer.xml
@@ -14,6 +14,7 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
+        app:itemIconTint="@color/colorAccent"
         app:headerLayout="@layout/layout_navigation_header"
         app:menu="@menu/activity_main_drawer"/>
 </androidx.drawerlayout.widget.DrawerLayout>
