--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -6,16 +6,28 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/myDeals"
-            android:icon="@drawable/ic_menu_camera"
+            android:icon="@drawable/ic_deal"
             android:title="@string/slide_bar_menu_2" />
         <item
             android:id="@+id/help"
-            android:icon="@drawable/ic_menu_camera"
-            android:title="@string/slide_bar_menu_3" />
+            android:icon="@drawable/ic_help"
+            android:title="@string/slide_bar_menu_3"
+             />
         <item
             android:id="@+id/activityMainDrawer_signOut"
-            android:icon="@drawable/ic_menu_camera"
+            android:icon="@drawable/ic_exit"
             android:title="Sign-Out"/>
+        <item
+            android:id="@+id/about_us"
+            android:icon="@drawable/ic_information"
+            android:title="About Us"
+            />
+        <item
+            android:id="@+id/Contact_Us"
+            android:icon="@drawable/ic_phone"
+            android:title="About Us"
+            />
+
 
     </group>
 </menu>
