--- a/app/src/main/res/layout/activity_contact_us.xml
+++ b/app/src/main/res/layout/activity_contact_us.xml
@@ -7,91 +7,120 @@
     tools:context=".contact_us">
 
     <ImageView
-        android:layout_width="188dp"
-        android:layout_height="209dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:src="@drawable/ic_logo"
-        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName"
+        app:layout_constraintBottom_toTopOf="@+id/contactUsPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.461"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintVertical_bias="1.0"
+        app:layout_constraintHeight_default="percent"
+        app:layout_constraintWidth_default="percent"
+        app:layout_constraintHeight_percent="0.3"
+        app:layout_constraintWidth_percent="1" />
 
     <TextView
         android:id="@+id/textView6"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:text="ConTacT Us"
         android:textColor="@color/colorAccent"
         android:textSize="35dp"
-        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName"
+        android:autoSizeTextType="uniform"
+        android:textAlignment="center"
+        app:layout_constraintBottom_toTopOf="@+id/contactUsPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.643" />
+        app:layout_constraintVertical_bias="0.643"
+        app:layout_constraintWidth_default="percent"
+        app:layout_constraintHeight_default="percent"
+        app:layout_constraintHeight_percent="0.08"
+        app:layout_constraintWidth_percent="0.8"/>
 
-    <Button
-        android:id="@+id/button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="60dp"
-        android:background="@drawable/sign_up_button_notactive"
-        android:text="Submit"
-        android:textAllCaps="false"
-        android:textSize="20dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
 
     <EditText
-        android:id="@+id/editTextTextPersonName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:id="@+id/contactUsPersonName"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:layout_marginBottom="32dp"
         android:background="@drawable/edit_text_box"
-        android:drawableStart="@drawable/ic_envelope_grey"
+        android:drawableStart="@drawable/ic_profile_person"
         android:drawablePadding="10dp"
         android:ems="10"
-        android:hint="Email"
+        android:hint="name"
         android:inputType="textEmailAddress"
         android:paddingStart="5dp"
-        android:textSize="25dp"
-        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName2"
+        android:textSize="15dp"
+        app:layout_constraintBottom_toTopOf="@+id/contactUsContact"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintWidth_default="percent"
+        app:layout_constraintHeight_default="percent"
+        app:layout_constraintHeight_percent="0.045"
+        app:layout_constraintWidth_percent="0.75"/>
 
     <EditText
-        android:id="@+id/editTextTextPersonName2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="60dp"
+        android:id="@+id/contactUsContact"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="40dp"
         android:background="@drawable/edit_text_box"
         android:drawableStart="@drawable/ic_profile_contact"
         android:drawablePadding="10dp"
         android:ems="10"
-        android:hint="Contact"
-        android:inputType="numberDecimal"
+        android:hint="Contact/Email"
         android:paddingStart="5dp"
-        android:textSize="25dp"
-        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName4"
+        android:textSize="15dp"
+        app:layout_constraintBottom_toTopOf="@+id/contactUsIssue"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintWidth_default="percent"
+        app:layout_constraintHeight_default="percent"
+        app:layout_constraintHeight_percent="0.045"
+        app:layout_constraintWidth_percent="0.75"/>
 
     <EditText
-        android:id="@+id/editTextTextPersonName4"
-        android:layout_width="286dp"
-        android:layout_height="208dp"
-        android:layout_marginBottom="52dp"
+        android:id="@+id/contactUsIssue"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="36dp"
         android:background="@drawable/edit_text_box"
         android:ems="10"
         android:gravity="start"
         android:hint="Describe your issue"
         android:inputType="textPersonName"
         android:paddingStart="5dp"
-        android:textSize="25dp"
-        app:layout_constraintBottom_toTopOf="@+id/button"
+        android:textSize="15dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.496"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintHeight_default="percent"
+        app:layout_constraintHeight_percent="0.3"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/contactUsContact"
+        app:layout_constraintWidth_default="percent"
+        app:layout_constraintWidth_percent="0.75" />
+
+    <Button
+        android:id="@+id/contactUsButton"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="28dp"
+        android:background="@drawable/sign_up_button_notactive"
+        android:text="Submit"
+        android:enabled="false"
+        android:textAllCaps="false"
+        android:textSize="20dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHeight_default="percent"
+        app:layout_constraintHeight_percent="0.06"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/contactUsIssue"
+        app:layout_constraintVertical_bias="0.367"
+        app:layout_constraintWidth_default="percent"
+        app:layout_constraintWidth_percent="0.3" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
