--- a/app/src/main/res/drawable/page_outline_rectangle.xml
+++ b/app/src/main/res/drawable/page_outline_rectangle.xml
@@ -3,7 +3,7 @@
     <item>
         <shape android:shape="rectangle">
             <solid android:color="@color/white"/>
-            <stroke android:color="@color/black" android:width="1dp"/>
+            <stroke android:color="@color/secondary" android:width="1dp"/>
         </shape>
     </item>
 </layer-list>
