--- a/xiniStudent/src/main/res/layout/activity_chat_card_view.xml
+++ b/xiniStudent/src/main/res/layout/activity_chat_card_view.xml
@@ -52,10 +52,11 @@
         android:id="@+id/imageView14"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginStart="312dp"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHeight_default="percent"
         app:layout_constraintHeight_percent="0.3"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintWidth_default="percent"
